# demucs

./: Demucs.ipynb  MANIFEST.in  README.md  demucs-torchcodec.ipynb  environment-cpu.yml  environment-cuda.yml  pyproject.toml  setup.py
demucs/: __init__.py  audio.py  repitch.py  states.py  wav.py
