[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demucs-torchcodec"
description = "An updated continuation of Demucs for source separation using torchcodec instead of torchaudio."
readme = "README.md"
requires-python = ">=3.8, <=3.13.0"
license = { text = "MIT License" }
author = [
    { name = "Alexandre Défossez" }
]
maintainer = [
    { name = "Soheir Elsakkout", email = "ssakkout.dev@gmail.com" }
]
keywords = ["source separation", "music", "torchcodec", "demucs"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
# Dynamic versioning to read from demucs/__init__.py
dynamic = ["version"]

dependencies = [
    "dora-search>=0.1.12",
    "diffq>=0.2.1",
    "einops",
    "hydra-colorlog>=1.1",
    "hydra-core>=1.1",
    "julius>=0.2.3",
    "lameenc>=1.2",
    "openunmix",
    "pyyaml",
    "submitit",
    "torch",
    "torchcodec",
    "tqdm>=4.36",
    "treetable>=0.2.3",
    # Platform specific dependency
    "soundfile>=0.10.3; sys_platform == 'win32'",
    "soundfile; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "museval>=0.4.0",
    "musdb>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/ssakkout/demucs-torchcodec"

[project.scripts]
demucs-torchcodec = "demucs.separate:main"

[tool.setuptools]
packages = ["demucs", "demucs.remote"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "demucs.__init__.__version__"}

[tool.setuptools.package-data]
demucs = ["py.typed"]
"*" = ["conf/**/*.yaml", "conf/*.yaml"]

[tool.mypy]
# Migrating settings from the mypy.ini
ignore_missing_imports = true